--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
     </div>
 
     <div class="grid-container">
-        <div class="grid-item" id="toggleAboutMe"> About me</div>
+        <div class="grid-item" id="toggleAboutMe"> 
+            <b>
+                About me
+            </b>
+            </div>
         <a class="grid-item" id="toggleDocButton">
+            <b>
             Resume
+            </b>
         </a>
-        <div class="grid-item" id="toggleContact">Contact</div>
-        <div class="grid-item">Projects</div>
+        <div class="grid-item" id="toggleContact">
+            <b>
+            Contact
+            </b>
+        </div>
+        <div class="grid-item">
+            <b>
+                Projects
+            </b>
+            </div>
     </div>
 
     <div id="ContactContainer">
