--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 About.style.left = "25px";
                 About.style.width = "1000px";
                 About.style.height = "877px";
+                Portrait.style.top = "-617px";
             } else {
                 About.style.display = "none";
             }
